massive update to make ready for production